bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: '(' expected but identifier found.
while !fini
      ^BDR:4: error: '(' expected but identifier found.
  if estSurMessage
     ^