bdr.BDR.scala.code
var fini = False:Boolean

while !fini
	if estSurMessage
		litMessage